Optimized descriptions showing

--- a/Index.html
+++ b/Index.html
@@ -54,10 +54,9 @@
     <div class="container-fluid">
         <div class="row jumbotron">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-x12-12 text-center">
-                <p class="hideLead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</p>
+                <p class="lead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</p>
                 <p class="hideLead">Oh wow</p>
                 <p class="hideLead">Hold da op</p>
-                <p class="lead">Klik på det billede du gerne vil vide mere om!</p>
             </div>
 
         </div>
