--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <script src="./assets/js/alcoholInfo.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/theProject.css" rel="stylesheet">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -16,64 +17,47 @@
 </head>
 
 <body>
-    <div id="carouselExampleIndicators" class="carousel slide ">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/vodka2.jpg">
-                <div class="carousel-caption txtbgrnd">
-                    <h1 class="display-2"> Vodka</h1>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/whiskey2.jpg">file:///C:/Users/Lasse/Desktop/Programmering/Alkohol_Semesterprojekt/Index.html#carouselExampleIndicators
-                <div class="carousel-caption  txtbgrnd">
-                    <h1 class="display-2"> Whiskey</h1>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/beer2.jpg">
-                <div class="carousel-caption  txtbgrnd">
-                    <h1 class="display-2"> Øl</h1>
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Forrige</span>
-  </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Næste</span>
-  </a>
-    </div>
-    <div class="container-fluid">
-        <div class="row jumbotron">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-x12-12 text-center">
-                <p class="lead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</p>
-                <p class="hideLead">Oh wow</p>
-                <p class="hideLead">Hold da op</p>
-            </div>
+    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+        <div class="container-fluid">
 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+		<span class="navbar-toggler-icon"> </span>
+	</button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="game.html">Game</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="alcoholInfo.html">Alcohol</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="text-center row">
+        <div class="col-2 col-sm-2 col-lg-3"></div>
+        <div class="content col-8 col-sm-8 col-lg-6">
+            <h1>SmartDrinking</h1>
+            <h2>What is "SmartDrinking"?</h2>
+            <p>SmartDrinking is a university project that aims to change people's drinking habbits to be more responsible.
+            While it doesn't aim to try and get anyone to stop drinking (let's be honest, that won't happen), it does aim to change the way others use alcohol and how much they consume in one sitting.</p>
+        </div>
+        <div class="col-2 col-sm-2 col-lg-3"></div>
     </div>
     <footer>
         <div class="container-fluid padding">
             <dic class="row text-center">
                 <div class="col-12">
-                    <p> © Copyright 2018 | Pornhub.com | All Rights Reserved | Contact - Sebastian "den frække" Flensted</p>
+                    <p>Lasse S. Madsen, Sandra B. Coyle, Sebastian Flensted, Sidsel Vanselow-Rasmussen</p>
                     <hr class="light">
                 </div>
             </dic>
         </div>
-
-
     </footer>
-
 </body>
 
 
