--- a/game.html
+++ b/game.html
@@ -8,14 +8,76 @@
     <title>3. Semesterprojekt</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./data.json"></script>
-    <link href="./assets/css/alcoholInfo.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/game.css" rel="stylesheet">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="./assets/js/alcoholInfo.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | VRDating</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/sfad.json", {
+            onProgress: UnityProgress
+        });
+
+    </script>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+        <div class="container-fluid">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+		<span class="navbar-toggler-icon"> </span>
+	</button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="game.html">Game</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="alcoholInfo.html">Alcohol</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="webgl-content d-none d-lg-block">
+        <div id="gameContainer" style="width: 960px; height: 600px"></div>
+        <div class="footer">
+            <div class="webgl-logo"></div>
+            <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+            <div class="title">VRDating</div>
+        </div>
+    </div>
+    <div class="row d-lg-none">
+        <div class="col-1 col-sm-2 col-lg-3"></div>
+        <img class ="gamePicture col-10 col-sm-8 col-lg-6" src="assets/images/aaaa.png">
+        <div class="col-1 col-sm-2 col-lg-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-1 col-sm-2 col-lg-3"></div>
+        <div class="text-center col-10 col-sm-8 col-lg-6">
+            <p>To dowload the VR-version of the game, klik <a href="url">Here!</a> (Obs! Only works for android phones!)</p>
+            <p class="d-none d-lg-block">AAAA????</p>
+            <p>As this is a virtual reality game, simply move your phone around to look around. When people ask you questions you answer them by nodding or shaking your head. You can drink by looking at the bottle on the table for X seconds.</p>
+            <p>Description of game, or literally anything else here</p>
+        </div>
+        <div class="col-1 col-sm-2 col-lg-3"></div>
+    </div>
+
     <footer>
         <div class="container-fluid padding">
             <dic class="row text-center">
@@ -30,26 +92,3 @@
 </body>
 
 </html>
-
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("alcohol");
-  if (n > x.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-</script>
-
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="./assets/js/alcoholInfo.js"></script>
