Responsive and designed webpage partly done

--- a/Index.html
+++ b/Index.html
@@ -38,21 +38,21 @@
             </div>
         </div>
     </nav>
-    <div class="text-center row">
-        <div class="col-2 col-sm-2 col-lg-3"></div>
-        <div class="content col-8 col-sm-8 col-lg-6">
+    <div class="text-center row no-gutters">
+        <div class="col-2 col-lg-3"></div>
+        <div class="content col-8 col-lg-6">
             <h1>SmartDrinking</h1>
             <h2>What is "SmartDrinking"?</h2>
             <p>SmartDrinking is a university project that aims to change people's drinking habbits to be more responsible.
             While it doesn't aim to try and get anyone to stop drinking (let's be honest, that won't happen), it does aim to change the way others use alcohol and how much they consume in one sitting.</p>
         </div>
-        <div class="col-2 col-sm-2 col-lg-3"></div>
+        <div class="col-2 col-lg-3"></div>
     </div>
     <footer>
         <div class="container-fluid padding">
             <dic class="row text-center">
                 <div class="col-12">
-                    <p>Lasse S. Madsen, Sandra B. Coyle, Sebastian Flensted, Sidsel Vanselow-Rasmussen</p>
+                    <p>© Copyright 2018 | Pornhub.com | All Rights Reserved | Contact - Sebastian Flensted</p>
                     <hr class="light">
                 </div>
             </dic>
