--- a/AlcoholInfo.html
+++ b/AlcoholInfo.html
@@ -74,16 +74,14 @@
     <span class="sr-only">Næste</span>
   </a>
     </div>
-    <div class="container-fluid row">
-        <div class="col-1 col-sm-2 col-lg-3"></div>
-        <div class="content col-10 col-sm-8 col-lg-6 jumbotron">
+    <div class="container-fluid ">
+        <div class="jumbotron">
             <div class="text-center">
                 <p class="lead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</p>
                 <p class="hideLead">Oh wow</p>
                 <p class="hideLead">Hold da op</p>
             </div>
         </div>
-        <div class="col-1 col-sm-2 col-lg-3"></div>
     </div>
     <footer>
         <div class="container-fluid padding">
