About and Game site done

--- a/AlcoholInfo.html
+++ b/AlcoholInfo.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </nav>
-    <div id="carouselExampleIndicators" class="carousel slide ">
+    <div id="carouselExampleIndicators" class="carousel slide">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" class="active"></li>
             <li data-target="#carouselExampleIndicators"></li>
@@ -75,11 +75,28 @@
   </a>
     </div>
     <div class="container-fluid ">
-        <div class="jumbotron">
-            <div class="text-center">
-                <p class="lead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</p>
-                <p class="hideLead">Oh wow</p>
-                <p class="hideLead">Hold da op</p>
+        <div class="jumbotron text-center">
+            <div class="lead">Der var engang en dreng! Drengen hed Jørgen.. Jørgen havde det hårdt i svømmeklubben Bolbro! Jørgen lever ikke mere :'(</div>
+            <div class="hideLead">Oh wow</div>
+            <div class="hideLead">
+                <h2>Why not drink and drive? What could possibly happen?</h2>
+                <p>A lot, actually.</p>
+                <p>Not only can you be fined and your license revoked for several years if you get caught, you can also end up killing others, and most likely yourself. Most drunk driving accident deaths include the driver of the car. This is because there is a much bigger chance of hitting things such as trees, houses, street lights or more rather than hitting another peson walking along the street.</p>
+                <h2>You mentioned fines and my license getting revoked, it can't possibly be that much!</h2>
+                <p>Fines and other consequences of driving and drinking as well as when these are given, heavily depend on the country you live in. For the sake of giving an example this site will be loking at the country of Denmark for it.</p>
+                <p>In Denmark, the limit of how much blood alcohol content (BAC) you're allowed to have when driving is 0.05%. Everything above this will be fined or more, so let's take a look at what can happen.</p>
+                <h3>First time getting caught</h3>
+                <p>When you're caught the first time and have a BAC of 0.051% to 0.12% you will get a fine which is calculated with this formula:</p>
+                <p>Monthly pay (after taxes) * BAC = fine</p>
+                <p>You will also be on trail for a period of time where your lisence will be taken from you if you get caught for anything else, such as speeding.</p>
+                <p>If you instead have a BAC of 0.12% then your license will also be suspended in at least 3 years.</p>
+                <p>If you have a BAC of 0.2% your fine will be your entire monthly pay (after taxes), your license will be suspended and you will have a 20 day prison sentence.</p>
+                <h3>Second time getting caught or more</h3>
+                <p>From here, the fine you get will be your monthly pay (after taxes) regardless of how much your BAC is. Your license will also be suspended for at least 3 years or more depending on how much over 0.05% your BAC is and how many times you've been caught before and and a prison sentence of at least 10 days is likewise given.</p>
+                <h2>Okay, but i won't get caught.</h2>
+                <p>Even if you won't you still pose a big risk to those around you as well as yourself. As we explain further in the slide about the body, your bodies functions lesson and become slower, so even if you think you can drive a car, you most likely cannot. It would be better to have another means of transportation home other than driving yourself if you've been drinking.</p>
+                <h2>Fine, but i definitely drive the morning after, right?</h2>
+                <p>That actually depends on how much you had the night before and how long it has been since then! As we also explain further in the slide about the body, the time it takes your body to lover your BAC is not affected by sleep or any other tips you may find or hear of, it is constant. So even if it is the next day, you might still have a BAC higher than the allowed 0.05%, so plan your drinking carefully when you need to drive even the next day!</p>
             </div>
         </div>
     </div>
@@ -87,7 +104,7 @@
         <div class="container-fluid padding">
             <dic class="row text-center">
                 <div class="col-12">
-                    <p> © Copyright 2018 | Pornhub.com | All Rights Reserved | Contact - Sebastian "den frække" Flensted</p>
+                    <p>© Copyright 2018 | <a href="https://cannonperson.itch.io/"> itch.io</a> | Læs mere hos <a href="https://www.sst.dk/da/sundhed-og-livsstil/alkohol"> Sundhedsstyrelsen</a></p>
                     <hr class="light">
                 </div>
             </dic>
